feat: Enhance typography and add visual elements
Introduces Baskerville Old Face and Libre Baskerville fonts to improve the visual hierarchy and aesthetic appeal. Adds a subtle "SOCIAL ARCHIVES" watermark to the ledger background for thematic depth. Adjusts the archive drawer's positioning to enhance the 3D perspective and visual composition. Updates profile images to better align with the application's cultural context.

--- a/index.html
+++ b/index.html
@@ -18,17 +18,19 @@
               'gold-accent': '#D4AF37',
             },
             fontFamily: {
-              serif: ['"Noto Serif SC"', 'serif'],
+              serif: ['"Baskerville Old Face"', '"Libre Baskerville"', '"Noto Serif SC"', 'serif'],
+              sans: ['"Baskerville Old Face"', '"Libre Baskerville"', '"Noto Serif SC"', 'sans-serif'],
+              mono: ['"Baskerville Old Face"', '"Libre Baskerville"', '"Noto Serif SC"', 'monospace'],
             }
           }
         }
       }
     </script>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Noto+Serif+SC:wght@400;700&display=swap" rel="stylesheet">
     <style>
       body {
         background-color: #B11414;
-        font-family: 'Noto Serif SC', serif;
+        font-family: 'Baskerville Old Face', 'Libre Baskerville', 'Noto Serif SC', serif;
         overflow: hidden; /* Prevent scrolling on main view */
       }
       /* Custom scrollbar for drawers */
